Fix DE codesystem config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -222,7 +222,7 @@ codesystem.config.SNOMEDCT-CA=Canadian English Edition|20621000087109|ca|Canada 
 codesystem.config.SNOMEDCT-CAF=Canadian French Edition|20611000087101|ca|Canada Health Infoway
 codesystem.config.SNOMEDCT-CH=Swiss Edition|2011000195101|en|eHealth Suisse
 codesystem.config.SNOMEDCT-CZ=Czech Republic Edition|11000279109|cs|Ministry of Health, Czech Republic
-codesystem.config.SNOMEDCT-DE=German Edition|11000274103|de|Bundesinstitut fÃ¼r Arzneimittel und Medizinprodukte, BfArM
+codesystem.config.SNOMEDCT-DE=German Edition|11000274103|de|Bundesinstitut für Arzneimittel und Medizinprodukte, BfArM
 codesystem.config.SNOMEDCT-DK=Danish Edition|554471000005108|dk|Danish Health Data Authority
 codesystem.config.SNOMEDCT-EE=Estonian Edition|11000181102|ee|Estonia Health and Welfare Information Systems Centre
 codesystem.config.SNOMEDCT-ES=Spanish Edition|449081005|es|SNOMED International
