MAINT-2737 Add Request interceptor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -906,6 +906,14 @@ springdoc.override-with-generic-response=false
 springdoc.show-actuator=true
 springdoc.swagger-ui.groups-order=desc
 
+# ----------------------------------------
+# Request
+#   Configure tracking of web requests made to service.
+#   Disabled by default.
+# ----------------------------------------
+snomed.request.enabled=false
+snomed.request.environment=local
+snomed.request.service=snowstorm
 
 # ----------------------------------------
 # Spring cloud consul config
